Please list items to be added to the final release comment here

New Features

Upgrades, Improvements and Bugfixes
  + Certificate profile fields (profile.template.*.yaml) now support the same attributes as workflow fields
  + Fix broken server response if custom translation strings contain special characters
  + Visual improvements of UI form fields (label hyphenation, continuation dots, sizing)
  + Breadcrumbs on most pages make it possible to see the latest actions at a glance
  + Popups now provide a Back button on follow-up popup pages

Removals, Deprecations, Breaking Changes
  + Remove API command "get_cert_subject_styles"
  + Remove unused method OpenXPKI::Client::UI::Result::__register_wf_token_initial()
  + Remove openxpkictl option --foreground (use --no-detach instead)